--- a/front/public/index.html
+++ b/front/public/index.html
@@ -29,6 +29,12 @@
       src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpKeyId=83rusppxge&submodules=geocoder"
     ></script>
 
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAom__l2iIp3cTgZfaz48eW3n0S4cyCkyg&callback=initMap"
+      async
+      defer
+    ></script>
+
     <title>React App</title>
   </head>
   <body>
